# paper-search-engine

./: Makefile  README.md  flake.nix  lib.nix  shell.nix
paper-search-be/: .gitignore  pyproject.toml
paper-search-be/examples/: python_tutorial.ipynb
paper-search-be/paper_search_be/: api.py  main.py  utils.py
paper-search-be/paper_search_be/paper_search/v1/: paper_search_pb2.py  paper_search_pb2.pyi  paper_search_pb2_grpc.py
paper-search-be/scripts/: process_data.py  submit_app.py
paper-search-be/scripts/static/: style.css
paper-search-be/scripts/templates/: index.html
paper-search-fe/: buf.gen.yaml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
paper-search-fe/app/: layout.tsx  page.tsx
paper-search-fe/components/: search-result.tsx  searchbox.tsx
paper-search-fe/lib/: action.ts  grpc.ts
proto/: buf.gen.yaml
proto/paper_search/v1/: paper_search.proto
